<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>orb_slam_ros2</name>
  <version>1.0.0</version>
  <description>ROS2 wrapper for ORB_SLAM3 library</description>
  <maintainer email="nahyoun.kim@hlcompany.com">Nahyoun Kim</maintainer>
  <license>MIT</license>
  <author>Nahyoun Kim</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>cv_bridge</depend>
  <depend>message_filters</depend>
  <depend>Pangolin</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
